Actualización para que sea funcional el sistema administrativo
Se modifica sistema administrativo para poder descargar de mejor manera la información y sea funciona

--- a/src/app/pages/alumnos/alumnos.component.html
+++ b/src/app/pages/alumnos/alumnos.component.html
@@ -19,10 +19,14 @@
 
     </div>
   </div>
-  
+
+
+
+
 <!-- Inicio del contenido de la Nav-->    
   <div class="nav-content">
     <ul class="tabs tabs-transparent">
+<!--
       <li class="tab">
         <a class="active" href="alumnos">Primera Etapa</a>
       </li>
@@ -32,6 +36,13 @@
       <li class="tab" >
         <a href="tercera">Tercera Etapa</a>
       </li>
+      
+      
+      <li class="tab" >
+        <a href="etapa">Etapa</a>
+      </li>
+
+    --> 
       
     </ul>
     
