--- a/src/app/pages/segunda-etapa/segunda-etapa.component.html
+++ b/src/app/pages/segunda-etapa/segunda-etapa.component.html
@@ -32,7 +32,7 @@
       <li class="tab" >
         <a href="tercera">Tercera Etapa</a>
       </li>
-      
+    
     </ul>
     
   </div>
@@ -184,4 +184,4 @@
     
     </div>
     <br/>
-  </ng-template>
+  </ng-template> take(1)
